Revision history for Catmandu-OCLC

{{$NEXT}}

0.006  2015-07-03 15:48:07 CEST
    - Fixing Catmandu::MARC dependency bug
    - Fixing JSON dependency bug
    
0.005  2014-06-12 06:50:54 BST
    - Fixing binmode issue in OCLC VIAF service
    
0.004  2014-06-11 06:33:12 BST
    - Updating pod
    
0.003  2014-06-10 15:36:27 BST
    - Adding viaf_read fix
   
0.002  2014-06-10 14:06:41 BST
    - Adding tests and documentation

0.001  2014-06-10 14:00:00 CEST
    - Initial version