@@ -26,7 +26,7 @@ my %module_build_args = (
   "requires" => {
     "Catmandu" => 0,
     "Catmandu::Importer::MARC" => 0,
-    "JSON" => 0,
+    "JSON::MaybeXS" => 0,
     "LWP::Simple" => 0,
     "Moo" => "1.0",
     "REST::Client" => 0,
